--- a/index.html
+++ b/index.html
@@ -17,20 +17,20 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav">
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Home <span class="sr-only">(2)</span></a>
+            <li class="nav-item">
+              <a class="nav-link" href="#portfolio">Portfolio</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Features</a>
+              <a class="nav-link" href="#contacts">Contact</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="#">Pricing</a>
+              <a class="nav-link" href="#" id="call">call now<a>
             </li>
           </ul>
         </div>
       </nav>
     </header>
-    <main class="wrap">
+    <main class="wrap" id="id">
       <div id="carouselExampleIndicators" class="carousel slide carousel-fade" data-ride="carousel">
         <ol class="carousel-indicators">
           <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
@@ -72,48 +72,48 @@
      <div class="main-text">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Velit iusto cum accusantium deserunt, libero esse sunt, nesciunt ipsum
         dolorem facilis repellat necessitatibus dolores dolorum vel et perferendis, sequi soluta veniam corrupti. Nostrum vel maxime
         quo accusamus incidunt, deleniti impedit ad dicta aliquam, doloribus dolorem sunt odio ea quos recusandae minus.</div>
-        <div class="cards-area" id="id">
+        <div class="cards-area" id="portfolio">
           <div class="card" v-for="item in items">
             <div class="card-wrap">
               <img :src="item.url" class="card-img-top" alt="Your dream">
             </div>
             <div class="card-body">
-              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+              <p class="card-text">{{item.text}}</p>
             </div>
           </div>
         </div>
         <div class="load-div">
-            <button class="btn btn-secondary" id="load">Load more
-              <div class="spinner-border text-primary" role="status" style="display: none;">
-                <span class="sr-only">Loading...</span>
+            <button class="btn btn-secondary" v-on:click='load' id="load">Load more
+              <div class="spinner-border spinner-border-sm text-primary" role="status" style="display: none;">
+                <span class="sr-only"></span>
               </div>
             </button>
         </div>
-        
     </main>
 
     <section class="singup row">
       <form class="col" method="POST" action="#">
-        <h3>Lorem, ipsum dolor.</h3>
+        <h3>Get more info about us</h3>
         <input type="email" placeholder="Enter your email" required>
+        <button type="submit" id="submit" class="btn btn-secondary">Send</button>
       </form>
     </section>
 
-    <footer class="footer">
-      <div class="container row">
+    <footer class="footer" id="contacts">
+      <div class="container">
         <div class="footer-left">
-          <span><a href="#">Terms and conditiosn</a></span>
+          <span><a href="#">Terms and conditions</a></span>
           <span><a href="#">Privacy</a></span>
         </div>
         <div class="footer-right row">
           <span>Follow</span>
           <ul>
-            <i class="fab fa-facebook"></i>
-            <i class="fab fa-twitter"></i>
-            <i class="fab fa-instagram"></i>
+            <i><a href="#"><i class="fab fa-instagram"></i></a></i>
+            <i><a href="#"><i class="fab fa-facebook"></i></a></i>
+            <i><a href="#"><i class="fab fa-twitter"></i></a></i>
           </ul>
         </div>
-    </div>
+      </div>
     </footer>
     <script src="https://code.jquery.com/jquery-3.5.1.js" integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc=" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
